[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Elisa Mero <elisa.mero@helsinki.fi>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pytest = "^7.4.3"
cowsay = "^6.1"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
